correction, documentation added
